--- a/EmojiCompatKotlin/app/src/main/res/layout/activity_main.xml
+++ b/EmojiCompatKotlin/app/src/main/res/layout/activity_main.xml
@@ -30,38 +30,18 @@
         android:orientation="vertical"
         android:padding="@dimen/spacing_normal">
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.example.android.emojicompat.CustomTextView
             android:id="@+id/emoji_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_small"
             android:textSize="@dimen/text_size"/>
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <com.example.android.emojicompat.CustomEditText
             android:id="@+id/emoji_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_small"
-            android:textSize="@dimen/text_size"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/emoji_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacing_small"
-            android:textSize="@dimen/text_size"/>
-
-        <TextView
-            android:id="@+id/regular_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacing_small"
-            android:textSize="@dimen/text_size"/>
-
-        <com.example.android.emojicompat.CustomTextView
-            android:id="@+id/emoji_custom_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:textSize="@dimen/text_size"/>
 
     </LinearLayout>
